refactor: collapse 7 services into LineService/PlcService and remove dead code
- Web and API controllers share LineService and PlcService; pass-through
  services, duplicate DTOs (PlcView/PlcResponse, LineDetailView) removed
- Line summaries come from one JPQL LEFT JOIN query returning LineSummary
- 401/403 ProblemDetail writers merged into SecurityConfig; JWT role mapping
  and UserDetailsService wiring left to Spring Boot configuration
- Composite IDs are @Embeddable records; redundant @Repository removed
- /line/{unknown} returns 404 like the API; dates formatted dd.MM.yyyy HH:mm:ss
- Removed default DB password, unused htmx WebJar, dead index.html and tests;
  test config reduced to a single config/application.properties override
- README setup order fixed: Flyway creates the schema, then load sample data